# ghost-blockchain

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  consensus.md  consensus.rs  quantum_consensus.md
.claude/: settings.local.json
.claude/agents/: blockchain-tester.md  unit-test-writer.md
docs/: rust-setup.md  testnet-readiness.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  miner.rs  rpc.rs  service.rs
pallets/pallet-ghost-consensus/: Cargo.toml
pallets/pallet-ghost-consensus/src/: benchmarking.rs  consensus.rs  functions.rs  lib.rs  mock.rs  rpc.rs  tests.rs  types.rs
pallets/template/: Cargo.toml
pallets/template/src/: mock.rs
pqc/: pqc_logic.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
scripts/: e2e-local.sh  simulate_esc.py  test_pqc.rs
