[workspace]
resolver = "2"
members = [
    "node",
    "runtime",
    "pallets/*",
]

[workspace.package]
authors = ["Ghost Blockchain Team"]
edition = "2021"
license = "Unlicense"
homepage = "https://github.com/devnull37/ghost-blockchain"
repository = "https://github.com/devnull37/ghost-blockchain"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
absolute-paths-not-starting-with-crate = "warn"
redundant-lifetimes = "warn"
explicit-outlives-requirements = "warn"
let-underscore = "allow"

[workspace.dependencies]
# Pin all dependencies to polkadot-sdk version/branch
clap = { version = "4.5.13", default-features = false }
futures = { version = "0.3.31", default-features = false }
jsonrpsee = { version = "0.24.3", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Polkadot SDK path dependency
polkadot-sdk = { path = "polkadot-sdk" }

# Frame and pallet dependencies
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }

# Substrate primitives
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-consensus-pow = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-crypto-hashing = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }

# Substrate client
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }

sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }

sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }

codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

# Local dependencies
pallet-template = { path = "pallets/template" }
pallet-ghost-consensus = { path = "pallets/pallet-ghost-consensus" }
solochain-template-runtime = { path = "runtime" }

[patch.crates-io]
proc-macro-error = { path = "vendor/proc-macro-error" }
