[workspace]
resolver = "2"
members = [
    "node",
    "runtime",
    "pallets/*",
]

[workspace.package]
authors = ["Ghost Blockchain Team"]
edition = "2021"
license = "Unlicense"
homepage = "https://github.com/devnull37/ghost-blockchain"
repository = "https://github.com/devnull37/ghost-blockchain"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
absolute-paths-not-starting-with-crate = "warn"
redundant-lifetimes = "warn"
explicit-outlives-requirements = "warn"
let-underscore = "allow"

[workspace.dependencies]
# Pin all dependencies to polkadot-sdk version/branch
clap = { version = "4.5.13", default-features = false }
futures = { version = "0.3.31", default-features = false }
jsonrpsee = { version = "0.23.2", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Polkadot SDK path dependency
polkadot-sdk = { path = "polkadot-sdk" }

# Frame and pallet dependencies
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }

# Substrate primitives
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-consensus-pow = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-crypto-hashing = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }

# Substrate client
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }

sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }

sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }

codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

# Local dependencies
pallet-template = { path = "pallets/template", default-features = false }
pallet-ghost-consensus = { path = "pallets/pallet-ghost-consensus" }
solochain-template-runtime = { path = "runtime" }
