[package]
name = "solochain-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.0.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
hex-literal = { version = "0.4.1" }

# frame
frame-executive = { workspace = true, default-features = false }
frame-metadata-hash-extension = { workspace = true, default-features = false }
frame-support = { features = ["experimental"], workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-try-runtime = { optional = true, workspace = true, default-features = false }

# frame pallets
pallet-aura = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }

# primitives
sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-consensus-aura = { features = ["serde"], workspace = true, default-features = false }
sp-consensus-grandpa = { features = ["serde"], workspace = true, default-features = false }
sp-core = { features = ["serde"], workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-runtime = { features = ["serde"], workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-storage = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { features = ["serde"], workspace = true, default-features = false }

# RPC related
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { optional = true, workspace = true, default-features = false }
frame-system-benchmarking = { optional = true, workspace = true, default-features = false }

# The pallet in this template.
pallet-template = { workspace = true, default-features = false }

# Ghost Consensus pallet
pallet-ghost-consensus = { path = "../pallets/pallet-ghost-consensus", default-features = false }

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
metadata-hash = ["std"]
runtime-benchmarks = ["frame-benchmarking", "frame-system-benchmarking"]
try-runtime = ["frame-try-runtime"]
std = [
    "codec/std",
    "frame-executive/std",
    "frame-system/std",
    "frame-support/std",
    "frame-metadata-hash-extension/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-ghost-consensus/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "scale-info/std",
    "serde_json/std",
    "substrate-wasm-builder"
]
