[package]
name = "pallet-ghost-consensus"
description = "Hybrid Proof-of-Work and Proof-of-Stake consensus pallet for Ghost blockchain."
version = "0.0.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

# frame deps
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# Additional deps for consensus
sp-core = { workspace = true }
sp-runtime = { workspace = true }
pallet-balances = { workspace = true }

# Hash functions
sp-crypto-hashing = { workspace = true }
pqcrypto-dilithium = { version = "0.5.0", default-features = false }
pqcrypto-traits = { version = "0.3.5", default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
    # "sp-consensus/std",  # REMOVE: sp-consensus does not have std feature
    "sp-crypto-hashing/std",
    "sp-io/std",
    "sp-runtime/std",
    # "sp-blockchain/std",  # REMOVE: sp-blockchain does not have std feature
    "pallet-balances/std",
    # "sc-client-api/std"  # REMOVE: sc-client-api does not have std feature
    "pqcrypto-dilithium/std",
    "pqcrypto-traits/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
